--- a/pickinghub-ui/package.json
+++ b/pickinghub-ui/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.11.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.11.0",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
