--- a/master-ui/package.json
+++ b/master-ui/package.json
@@ -1,24 +1,17 @@
 {
-  "name": "pickinghub-ui",
+  "name": "master-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "react": "^16.11.0",
-    "react-cookies": "^0.1.1",
-    "react-dom": "^16.11.0",
-    "react-redux": "^7.1.3",
-    "react-responsive-carousel": "^3.1.51",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "djangofy": "npm run build && node djangofication"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
